# DeepLearning-NOVAIMS2026

./: .gitignore  README.md  cnn_generalization_strategy_guide.md  main.py  pyproject.toml  requirements.txt  split_dataset.py
notebooks/: Data Understanding - Group 8.ipynb  NN.ipynb  explore_wikiart.ipynb
notebooks/EDA/: EDA.ipynb
src/: explore_wikiart.ipynb
